hw_9: реализован ObjectStreamPathStorage и тесты к нему. Внесены исправления в AbstractPathStorage